--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
 spring.application.name=gestionFondosGFT-api
+
+# Server configuration
+server.port=8080
+
+# Configuración de AWS SES
+cloud.aws.ses.from-address=rafangarac@gmail.com
+
+# AWS Region (Crucial para Spring Cloud AWS)
+cloud.aws.region.static=us-east-1
+
+# SpringDoc OpenAPI (Swagger UI) Configuration
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.path=/v3/api-docs
+
+
+# Logger Configuration
+logging.level.root=INFO
+logging.level.com.btgpactual=DEBUG
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1.}:%L - %m%n
